# nepali-speech-phones-kit

./: .gitignore  CITATION.cff  LICENSE  PROGRESS.md  README.md  pyproject.toml  t6_review.txt  t6_rules.txt
data/: heldout_source.xlsx  lexicon_seed_source.xlsx  regression_corpus.tsv  sample_sentences.txt
docs/: AUDIT_LEXICON_OVERRIDES.md  DEPENDENCIES.md  IMPLEMENTATION_ROADMAP.md  INVENTORY.md  METHODOLOGY.md  SPECIFICATION.md  STANDARD_CITATION  STANDARD_README.md  TEST_STRATEGY.md  TTS_INTEGRATION_PLAN.md  benchmark_differential.md
examples/: README.md  build_dataset.py  matcha_readme.md  piper_readme.md
nspc/: cli.py
nspc/core/: inventory.py  lexicon.py  mixed_script.py  normalize.py  normalize_text.py  numbers.py  rules.py  trace.py  u5_reference.py
nspc/core/adapters/: __init__.py  ipa.py  json.py  kokoro.py  matcha.py  piper.py
nspc/tools/: differential_demo.py  review.py
tests/: test_matra_inventory_consistency.py  test_mixed_script.py  test_nasal_anusvara_chandrabindu.py  test_native_audit.py  test_no_trailing_schwa.py  test_numbers.py  test_schwa_ohala.py  test_standard_regression.py
