[project]
name = "nspc"
version = "1.0.0"
description = "Universal Nepali G2P frontend: Devanagari text to canonical phonemes for TTS training"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Sandip Ghimire" }]
keywords = ["nepali", "g2p", "tts", "text-to-speech", "phonemizer", "devanagari", "speech", "nlp"]
dependencies = []

[project.optional-dependencies]
trainers = ["openpyxl", "indicxlit"]
dev = ["pytest"]

[project.scripts]
nspc = "nspc.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
